<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/mydata_bg">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/img_back"
            android:id="@+id/mydata_back"
            android:onClick="change_alpha"
            android:layout_margin="3dp"/>


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@string/head_portrait"
                android:layout_below="@+id/mydata_back"
                android:layout_centerHorizontal="true"
                android:id="@+id/imageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView"
                android:textColor="#FFFFFF"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="身高"
                    android:textColor="#FFFFFF" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="体重"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="BMI"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="目标"
                    android:textColor="#FFFFFF"/>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="4dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/height"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/weight"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/BMI"
                    android:textColor="#FFFFFF"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/target"
                    android:textColor="#FFFFFF"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:horizontalSpacing="2dp">
        <TableRow>

        </TableRow>
    </TableLayout>
</LinearLayout>
