<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#50b5e4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="历史记录"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:gravity="center" />
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/img_back"
            android:onClick="change_alpha"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#d4d4d4"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/histroy_date1"
            android:textColor="#5b5b5b"
            android:layout_marginLeft="12dp"
            android:textSize="12dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/histroy_date2"
            android:textColor="#5b5b5b"
            android:layout_marginLeft="12dp"
            android:textSize="10dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:src="@drawable/run"
            android:layout_gravity="center"/>
        <!--运动状态-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="慢跑"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:textStyle="italic"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/histroy_distance"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold|italic"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="公里"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="3dp"
            android:textColor="#868686"
            android:textSize="12dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/time"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histroy_time"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="12dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/pace"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histroy_pace"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="12dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="步"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="3dp"
            android:textColor="#868686"
            android:textSize="8dp" />
    </LinearLayout>

</LinearLayout>