<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".map">
            <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="#66000000"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.amap.api.maps.MapView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_back_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left">
                    <Button
                        android:id="@+id/button_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/register_back"
                        android:onClick="change_roll"/>
                </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
       <Button
           android:id="@+id/btStart"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:background="@drawable/map_button_color"
           android:text="开始"
           android:textColor="#ffffff"/>
    </LinearLayout>


        <TableLayout
            android:background="#6eabcf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/t_top">
            <TableRow android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/running_time"
                    android:id="@+id/imageView2"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/running_pace"
                    android:id="@+id/imageView3"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="时间"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="速度"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical" />
            </TableRow>

                <TableRow android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/running_time"
                        android:textColor="#ffffff"
                        android:textSize="25dp"
                        android:id="@+id/tvTime"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/running_pace"
                        android:textColor="#ffffff"
                        android:textSize="25sp"
                        android:id="@+id/textView7"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical" />
                </TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1px"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff" />

                <TableRow android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:src="@drawable/running_distance"
                        android:id="@+id/imageView5"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:src="@drawable/running_energy"
                        android:id="@+id/imageView4"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"/>
                </TableRow>

            <TableRow android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="路程"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="能量"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center_vertical" />
            </TableRow>



            <TableRow android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/running_distance"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:gravity="center"
                    android:id="@+id/tvDistance"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/running_energy"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </TableRow>


        </TableLayout>
   </LinearLayout>