<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_frame_background5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#50b5e4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="历史数据"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:gravity="center" />
        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/img_back"
            android:onClick="change_alpha"/>

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="3dp"
            android:background="@drawable/img_share"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


    <!--轨迹图-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="#636363">
        <com.amap.api.maps.MapView
            android:id="@+id/traceMap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:background="#77000000"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relative1"
            android:layout_weight="4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/histroy_distance"
                    android:textColor="#ffffff"
                    android:textSize="50dp"
                    android:layout_marginLeft="30dp"
                    android:textStyle="bold"
                    android:id="@+id/distance1"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" km"
                    android:textColor="#b7b7b7"
                    android:textSize="21dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/histroy_pace"
                android:textColor="#ffffff"
                android:textSize="40dp"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 步"
                android:textColor="#b7b7b7"
                android:textSize="16dp"
                android:id="@+id/pace"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#77000000"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="时速 (km/h)"
                android:textColor="#dedede"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用时(min)"
                android:textColor="#dedede"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="能量(kJ)"
                android:textColor="#dedede"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#77000000">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/histroy_speed"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/speed"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/histroy_time"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/time"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/histroy_energy"
                android:textColor="#ffffff"
                android:textSize="25dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/energy"/>
        </RelativeLayout>
    </LinearLayout>




    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="120dp"-->
        <!--android:background="#ffffff"-->
        <!--android:orientation="horizontal">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_weight="7">-->
        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="120dp">-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/histroy_distance"-->
            <!--android:textColor="#000000"-->
            <!--android:textSize="50dp"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:textStyle="bold|italic"-->
            <!--android:id="@+id/distance1"/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="km"-->
                <!--android:textColor="#000000"-->
                <!--android:textSize="21dp"-->
                <!--android:layout_alignBottom="@+id/distance1"-->
                <!--android:layout_toRightOf="@+id/distance1"-->
                <!--android:layout_marginLeft="11dp" />-->
        <!--</RelativeLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_weight="8"-->
            <!--android:orientation="vertical">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1">-->
                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="#8f8f8f"-->
                <!--android:text="时速(km/h) :"-->
                <!--android:textSize="13dp"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:id="@+id/textView6"-->
                <!--android:layout_marginRight="10dp"/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="#000000"-->
                <!--android:text="@string/histroy_speed"-->
                <!--android:textSize="20dp"-->
                <!--android:id="@+id/speed"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_toRightOf="@+id/textView6" />-->


                    <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1px"-->
                    <!--android:background="#c7c7c7"-->
                    <!--android:layout_alignParentBottom="true" />-->
                <!--</RelativeLayout>-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1">-->
                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textColor="#8f8f8f"-->
                        <!--android:text="时间(min) :   "-->
                        <!--android:textSize="13dp"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:id="@+id/textView7"-->
                        <!--android:layout_marginRight="10dp"/>-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textColor="#000000"-->
                        <!--android:text="@string/histroy_time"-->
                        <!--android:textSize="20dp"-->
                        <!--android:id="@+id/time"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:layout_toRightOf="@+id/textView7" />-->


                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1px"-->
                        <!--android:background="#c7c7c7"-->
                        <!--android:layout_alignParentBottom="true"-->
                        <!--android:layout_alignParentLeft="true" />-->
                <!--</RelativeLayout>-->
            <!--</LinearLayout>-->


            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1">-->
                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textColor="#8f8f8f"-->
                        <!--android:text="能量(kJ) :     "-->
                        <!--android:textSize="13dp"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:id="@+id/textView8"-->
                        <!--android:layout_marginRight="11dp"/>-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textColor="#000000"-->
                        <!--android:text="@string/histroy_energy"-->
                        <!--android:textSize="20dp"-->
                        <!--android:id="@+id/energy"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:layout_toRightOf="@+id/textView8" />-->


                <!--</RelativeLayout>-->
            <!--</LinearLayout>-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->


    <!--图表-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:background="#636363">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>